# Homegear-Somfy

./: .project  CMakeLists.txt  Makefile.am  README.md  configure.ac  makeRelease.sh
debian/: changelog  control  copyright  postinst  postrm  rules
misc/Config Directory/: somfy.conf
misc/Device Description Files/: Remote.xml
src/: Factory.cpp  Factory.h  GD.cpp  GD.h  Interfaces.cpp  Interfaces.h  Makefile.am  MyCentral.cpp  MyCentral.h  MyFamily.cpp  MyFamily.h  MyPacket.cpp  MyPacket.h  MyPeer.cpp  MyPeer.h
src/PhysicalInterfaces/: Cul.cpp  Cul.h  Cunx.cpp  Cunx.h  ISomfyInterface.cpp  ISomfyInterface.h
